--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ before_script:
     - pip install coverage
     - coverage run --source atooms -m unittest discover -s tests
     # Backends tests are skipped, thus we do not include them in coverage
-    - coverage report --omit=atooms/backends/*py
+    - coverage report
   artifacts:
     paths:
       - .coverage
