--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,14 +23,13 @@ before_script:
   - virtualenv env
   - source env/bin/activate
   - pip install -r requirements.txt
-  - ls  
 
 .test:
   script:
     - pip install coverage
     - coverage run --source atooms -m unittest discover -s tests
     # Backends tests are skipped, thus we do not include them in coverage
-    - coverage report
+    - coverage report -m
   artifacts:
     paths:
       - .coverage
