--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,6 @@ before_script:
   script:
     - pip install coverage
     - coverage run --source atooms -m unittest discover -s tests
-    # Backends tests are skipped, thus we do not include them in coverage
     - coverage report -m
   artifacts:
     paths:
@@ -46,6 +45,28 @@ test:3.6:
 test:latest:
   image: python:latest
   extends: .test
+
+test:f90:
+  image: python:latest
+  coverage: '/^TOTAL.+?(\d+\%)$/'
+  script:
+  - apt-get update
+  - apt-get -q -q -y install g++ gfortran
+  - apt-get -q -q -y install python3
+  - apt-get -q -q -y install python3-pip
+  - python3 -V  # Print out python version for debugging
+  - rm -rf env/
+  - pip3 install virtualenv
+  - virtualenv env
+  - source env/bin/activate
+  - pip install -r requirements.txt
+  - cd atooms/postprocessing
+  - f2py -c -m realspace_wrap realspace.f90
+  - f2py -c -m fourierspace_wrap fourierspace.f90
+  - cd ..
+  - pip install coverage
+  - coverage run --source atooms -m unittest discover
+  - coverage report -m    
 
 # .run:
 #   script:
