--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,17 +34,17 @@ before_script:
       - .coverage
   coverage: '/^TOTAL.+?(\d+\%)$/'
 
-test:2.7:
-  image: python:2.7
-  extends: .test
+# test:2.7:
+#   image: python:2.7
+#   extends: .test
 
-test:3.6:
-  image: python:3.6
-  extends: .test
+# test:3.6:
+#   image: python:3.6
+#   extends: .test
 
-test:latest:
-  image: python:latest
-  extends: .test
+# test:latest:
+#   image: python:latest
+#   extends: .test
 
 test:f90:
   image: python:latest
