--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,15 +27,12 @@ test:f90:
   image: python:latest
   coverage: '/^TOTAL.+?(\d+\%)$/'
   script:
-  - python -V  # Print out python version for debugging
-  - pip install virtualenv
-  - virtualenv env
-  - source env/bin/activate
-  - pip install -r requirements.txt
   - apt-get update
   - apt-get -q -q -y install g++ gfortran
   - apt-get -q -q -y install python3
   - apt-get -q -q -y install python3-pip
+  - apt-get -q -q -y install python3-dev
+  - apt-get -q -q -y install make
   - python3 -V  # Print out python version for debugging
   - rm -rf env/
   - pip3 install virtualenv
